--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.4.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "dotenv": "^16.4.5",
     "mongoose": "^8.5.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
